# faroese-llm-benchmark

./: LICENSE  README.md  pyproject.toml
data/: inflections_grammar.json  test_grammar_rules.json  test_morphological_understanding.json  test_translation_accuracy.json
results/: grammar_rule_application_results_20240801_210154.json  morphological_understanding_results_20240801_210128.json  translation_accuracy_results_20240801_210145.json
scripts/: plot_results.py  run_tests.py
